# NirSpectra

./: .env  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci-workflow.yaml
docs/: README.md
nirspectra/: README.md
notebooks/: README.md
notebooks/exploration/: example-exploratory-data-analysis.md
notebooks/modeling/: example-modeling-with-mlflow.md
